#9 Fix select sizing on IE11

--- a/src/components/Investment/style.scss
+++ b/src/components/Investment/style.scss
@@ -16,5 +16,6 @@
 	// IE11: fix nested flexbox overflow
 	.investment select {
 		flex: none;
+		width: 184px;
 	}
 }
